@@ -1,4 +1,11 @@
 2008-03-02 Brian Matherly <brian@gramps-project.org>
+	* src/docgen/TextBufDoc.py:
+	0001882: Reports->Text Reports->Kinship Report output to 
+	"Text buffer" causes an error
+	No longer use Text Buffer for reports because TextBufDoc does not 
+	conform to the report interface.
+
+2008-03-02 Brian Matherly <brian@gramps-project.org>
 	* src/plugins/Calendar.py:
 	0001880: Birthday and Anniversary Report does not work
 
